--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    transition: 0.2s ease-in-out; 
 }
 
 :root{
@@ -38,16 +43,31 @@
 
 
 .main-top{
-    height: 40vh;
+    height: 30vh;
 }
 
 
 .main-mid{
-    height: 20vh;
-    box-shadow: 3px 3px 10px 2px rgba(150,150,150, 0.95)
-    ;
+    height: 40vh;
+    box-shadow: 3px 3px 10px 2px rgba(150,150,150, 0.95);
+    display: flex;
+    flex-direction: column;
 }
 
 .main-bot{
-    height: 40vh;
+    height: 30vh;
+}
+
+#main-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-block{
+    display: flex;
+}
+
+.form-element{
+    display: flex;
+    flex-direction: column;
 }
