🔨 refactor base structure

--- a/style.css
+++ b/style.css
@@ -24,52 +24,28 @@
     background-repeat: no-repeat;
     height: 100vh;
 }
+#background-footer {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: var(--sidebar-width);
+}
 
-
-
-.main-wrapper{
+.main-content{
     display: flex;
     flex-direction: column;
     width: var(--main-width);
     height: 100vh;
     background-color: rgb(255, 255, 255);
 }
-
-
-.main-top{
-    height: 30vh;
-}
-
-
-.main-mid{
-    height: 40vh;
-    box-shadow: 3px 3px 10px 2px rgba(150,150,150, 0.95);
-    display: flex;
-    flex-direction: column;
-}
-
-.main-bot{
-    height: 30vh;
-}
-
 #main-form{
     display: flex;
     flex-direction: column;
 }
-
 .form-block{
     display: flex;
 }
-
 .form-element{
     display: flex;
     flex-direction: column;
-}
-
-
-#background-footer {
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    width: var(--sidebar-width);
 }
