--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ span.material-symbols-outlined {
     text-align: center;
     color: white;
     background-color: rgba(96, 104, 136, 0.5);
-    
     padding: 3rem;
 }
 #background-footer {
@@ -109,10 +108,12 @@ p > a {
 .form-block{
     display: flex;
     gap: 5rem;
+    flex-wrap: wrap;
 }
 .form-element{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 .form-element small {
     margin-top: 5px;
@@ -174,3 +175,46 @@ button:hover {
   box-shadow: 5px 5px 10px rgb(0 0 0 / 35%);
 }
 
+
+@media only screen and (max-width: 1150px) {
+    :root {
+        --sidebar-width: 100vw
+        --main-width: 100vw
+    }
+    .container {
+        flex-direction: column
+    }
+    span.material-symbols-outlined {
+        font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 64;
+        font-size: 2rem;
+      }
+    .background {
+        height: 20vh;
+    }
+    .logo > p {
+        top: 5vh;
+        padding: 1rem;
+        width: 100vw;
+        font-size: 1.5rem;
+    }
+    #background-footer {
+        position: absolute;
+        top: 18vh;
+        text-align: center;
+        width: 100vw;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 0.5rem;
+        text-shadow:2px 3px 4px rgba(83,83,83,0.68);
+    }
+    .main-content {
+        height: 170vh;
+    }
+    .main-form {
+        justify-content: center;
+    }
+  }
